--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "gulp-comby": "file:../gulp-comby",
         "jquery": "3.4.1",
         "jquery.easing": "^1.4.1",
-        "magnific-popup": "^1.1.0"
+        "magnific-popup": "^1.1.0",
+        "node-sass": "^4.12.0"
     },
     "devDependencies": {
         "browser-sync": "2.26.5",
