--- a/website/package.json
+++ b/website/package.json
@@ -19,7 +19,5 @@
   "dependencies": {
     "classnames": "^2.2.6"
   },
-  "resolutions": {
-    "**/underscore.string": "^3.3.5"
-  }
+  "packageManager": "yarn@3.6.4"
 }
